# Embedded-202002

./: .gitignore  README.md
0925/: open_test.c
1002/: practice01.c  practice02.c  practice03.c  practice04.c  practice05.c
1009/: pipe.c  practice01.c  practice02_c.c  practice02_s.c  practice03_c.c  practice03_s.c  practice04.c  practice05.c  practice06.c
Lab01/: CMakeLists.txt  toolchain.arm.cmake
Lab01/include/: definitions.h
Lab01/src/: main.c
Lab01/util/: gen_large_file.py
